# cargo-syu

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs
