[package]
name = "cargo-syu"
version = "0.1.1"
edition = "2021"
description = "Update Rust binary crates"
readme = "README.md"
repository = "https://github.com/idealseal/cargo-syu"
license = "MIT"
keywords = ["cargo", "update"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
git2 = "0.19.0"
home = "0.5.11"
owo-colors = "4.1.0"
rayon = "1.10.0"
semver = { version = "1.0.24", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tempfile = "3.14.0"
toml = "0.8.19"
ureq = "2.12.1"
