[package]
name = "cargo-syu"
version = "0.1.2"
edition = "2021"
description = "Update Rust binary crates"
readme = "README.md"
repository = "https://github.com/idealseal/cargo-syu"
license = "MIT"
keywords = ["cargo", "update"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
git2 = "0.20.0"
home = "0.5.11"
inquire = { version = "0.7.5", default-features = false, features = ["crossterm", "one-liners"] }
owo-colors = "4.1.0"
rayon = "1.10.0"
semver = { version = "1.0.25", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tempfile = "3.15.0"
toml = "0.8.19"
ureq = "2.12.1"
