[package]
name = "cargo-syu"
version = "0.1.3"
edition = "2024"
description = "Update Rust binary crates"
readme = "README.md"
repository = "https://github.com/idealseal/cargo-syu"
license = "MIT"
keywords = ["cargo", "update"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
git2 = "0.20.2"
home = "0.5.11"
inquire = { version = "0.7.5", default-features = false, features = ["crossterm", "one-liners"] }
owo-colors = "4.2.2"
rayon = "1.10.0"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
toml = "0.9.0"
ureq = "3.0.12"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
